# BirgeFund

./: .env.example  .env.prod  .gitignore  FRONTEND_SMOKE_CHECKLIST.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0626a7c9eb93_add_payment_attempt_model.py  14657b61f39d_add_project_reward_packages.py  332ee92b155e_add_refresh_tokens.py  494b37c9a088_add_complaint_system.py  4cf762b7e39b_add_static_translations_dictionary.py  5c1ed74a2f5d_add_project_reports.py  6e769989958e_add_project_and_translation_models.py  7b9f1d549c86_add_local_file_storage_service.py  90f62261f29d_add_project_updates.py  a607bd205ab0_add_project_comments.py  a649cc513345_add_test_refund_service.py  aac9bf1f1640_add_platform_fee_rules.py  bf900c826a66_add_multilingual_categories.py  c9a66ed2a668_add_immutable_ledger_entries.py  cac8cf805e16_add_roles_and_permissions.py  cb6fe8c32436_add_multilingual_banners.py  cc5ebf856db3_add_audit_log_model_and_service.py  d73e7a204ac0_add_cms_pages.py  f2023b607ddf_add_user_model.py  f4af51264341_add_internal_notifications.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  exceptions.py  pagination.py  permissions.py  rate_limit.py  redis.py  security.py
backend/app/db/: base.py  init_db.py  seed_demo.py  session.py
backend/app/modules/admin/: repository.py  router.py  (+2 more)
backend/app/shared/: enums.py  schemas.py  types.py  utils.py
backend/app/tests/: test_health.py
(+315 files in other folders)
