[project]
name = "birgefund-backend"
version = "0.1.0"
description = "Backend for BirgeFund crowdfunding demo platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "email-validator>=2.2.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "pwdlib[argon2]>=0.2.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests", "app/modules"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
